--- a/src/main/java/me/joney/plugin/coderkit/genemybatis/ui/MyBatisMethodGenerateUi.form
+++ b/src/main/java/me/joney/plugin/coderkit/genemybatis/ui/MyBatisMethodGenerateUi.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="me.joney.plugin.coderkit.genemybatis.ui.MyBatisMethodGenerateUi">
   <grid id="27dc6" binding="contentPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="408" height="400"/>
     </constraints>
@@ -32,17 +32,21 @@
               <text value="Result Map"/>
             </properties>
           </component>
-          <component id="c2ae5" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+          <component id="c2ae5" class="javax.swing.JComboBox" binding="mapperXmlSelectBox">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <enabled value="false"/>
+            </properties>
           </component>
-          <component id="ffd75" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+          <component id="ffd75" class="javax.swing.JComboBox" binding="resultMapSelectBox">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <enabled value="false"/>
+            </properties>
           </component>
           <component id="88a50" class="javax.swing.JLabel">
             <constraints>
@@ -52,13 +56,16 @@
               <text value="Method Name"/>
             </properties>
           </component>
-          <component id="11446" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="11446" class="javax.swing.JTextField" binding="methodNameField">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="true"/>
+              <enabled value="true"/>
+            </properties>
           </component>
         </children>
       </grid>
@@ -80,7 +87,7 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="18df" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="18df" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -88,21 +95,27 @@
         <properties/>
         <border type="none"/>
         <children>
-          <scrollpane id="8cdf4">
+          <component id="804fc" class="javax.swing.JButton" binding="cancelButton" default-binding="true">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <scrollpane id="3f8ab">
-                <constraints/>
-                <properties/>
-                <border type="none"/>
-                <children/>
-              </scrollpane>
-            </children>
-          </scrollpane>
+            <properties>
+              <text value="Cancel"/>
+            </properties>
+          </component>
+          <hspacer id="249c8">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <component id="ebdda" class="javax.swing.JButton" binding="oKButton">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="OK"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <vspacer id="8166a">
